syntax = "proto3";
package com.example.grpc;

option java_multiple_files = true;


message ImageRequest {
  int32 camId = 1;
}

message ImageResponse {
  bytes frames = 1;
  int32 temperature = 2;
  string date = 3;
}

service ImageService {
  rpc play(ImageRequest) returns(stream ImageResponse);

}